@@ -1,3 +1,9 @@
+2012-08-11  Araki Ken  <arakiken@users.sf.net>
+
+	* android/: Added.
+
+	* kik_pty_streams.c: Fixes for android.
+
 2012-08-10  Araki Ken  <arakiken@users.sf.net>
 
 	* 3.1.3 released.
